# lang-mu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  context.c  context.h  exec.c  exec.h  exec_builtin.c  exec_builtin.h  exec_builtin_io.c  exec_builtin_predicates.c  exec_builtin_strings.c  exec_eval.c  exec_eval.h  exec_internal.c  exec_internal.h  exec_make.c  exec_make.h  exec_math.c  exec_math.h  exec_predicates.c  exec_predicates.h  exec_types.h  gc.c  gc.h  lang-mu.cbp  load.c  load.h  log.h  main.c  map.c  map.h  mu.l  mu.y  parser.c  parser.h  print.c  print.h  stree.c  (+3 more)
exec/: constructions.c  constructions.h  context.c  context.h  eval.c  eval.h  exec.c  exec.h  executor.c  executor.h  function.c  function.h  gc.c  gc.h  make.c  make.h  math.c  math.h  predicates.c  predicates.h  types.h
exec/builtin/: control.c  evaluation.c  functions.h  io.c  list.c  math.c  predicates.c  string.c
parsing/: mu.l  mu.y  stree.c  stree.h
stdlib/: longnum.c  longnum.h  longnum_stub.c  longnum_stub.h  stdlib.mu  str.c
tests/: hello-world.mu  in.mu  program.mu
types/: longint.c  longint.h  string.c  string.h
utils/: map.h  strutils.c  strutils.h
